--- a/src/pages/Tatuadores/Tatuadores.css
+++ b/src/pages/Tatuadores/Tatuadores.css
@@ -33,7 +33,7 @@
 .apiCallButton{
     color: #e91e63;
 }
-.characterContainer{
+.artistContainer{
     padding: 10px 30px 10px 10px ;
     display: flex;
     justify-content: center;
