--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,22 +1,45 @@
-
-
 .profileDesign {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    
+
 }
 
-h1, h2{
+.userInfo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    align-items: center;
+    gap: 2em;
+}
+
+h1,
+h2,
+h3 {
     color: #fff;
 }
-img{
+
+img {
     width: 50px;
     height: 50px;
 }
-p{
+
+p {
     color: #fff;
 }
+.appointmentsUserContainer {
+    padding: 10px 30px 10px 10px ;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+    overflow: hidden;
+    gap: 3em;    
 
+}
