Acceso como superAdmin y su vista iniciada, siguiente paso configurar menú añadiendo el role

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -48,3 +48,13 @@ p {
     display: flex;
     flex-direction: column;
 }
+
+.portofolioImg {
+    width: 100px!important;
+    height: 100px!important;
+}
+
+.port {
+    width: 100px!important;
+    height: 100px!important;
+}
