--- a/src/Components/UserCard/UserCard.css
+++ b/src/Components/UserCard/UserCard.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
     
     
     
@@ -13,7 +14,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 250px;
-    height: 375px;
+    height: 400px;
     margin-top: 2%; 
     color: #FFF;
     line-height: 1.5em;
@@ -50,7 +51,7 @@
   }
   
   .artist-card h3 {
-    font-size: clamp(20px, 4vw, 30px);
+    font-size: clamp(10px, 3vw, 20px);
     margin-bottom: 5px;
     overflow: hidden;
     word-break: break-all;
