--- a/src/pages/SuperAdminView/SuperAdminView.css
+++ b/src/pages/SuperAdminView/SuperAdminView.css
@@ -1,37 +1,35 @@
- 
-.users-body{
-    height: 84vh;
-    width: 100vw;
-    background-color:  rgba(63, 95, 95, 0);
+ .users-body {
 
-    display: flex;
-    justify-content: center; 
-}
+     display: flex;
+     justify-content: center;
+     flex-direction: row;
+ }
 
+ .container-all-users {
+     padding: 10px 30px 10px 10px;
+     display: flex;
+     justify-content: center;
+     flex-direction: row;
+     width: 100%;
+     flex-wrap: wrap;
+     overflow: hidden;
+     gap: 5em;
+     width: 100vw;
+     height: 5em;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     position: relative;
+     /* top: 7em; */
+ }
 
-.users-Roster{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
+ .container-all-users {
+     height: 100vh;
+     width: 100vw;
 
-.pagination-all-users {
-    width: 100vw;
-    height: 5em;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: absolute;
-    top: 7em;
-}
-
-.container-all-users{ 
-    height: 100vh;
-    width: 100vw;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    margin-top: 8em;
-}
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     position: absolute;
+     margin-top: 8em;
+ }
