--- a/src/Components/ArtistCard/ArtistCard.css
+++ b/src/Components/ArtistCard/ArtistCard.css
@@ -42,8 +42,8 @@
 
   
   .artist-card:hover {
-    transition-duration: 1.25s;
-    transform: scale(1.5);
+    /* transition-duration: 1.25s;
+    transform: scale(1.5); */
     box-shadow: 0 0 100px 12px hsl(340, 82%, 52%);
     cursor: pointer;
     z-index: 10;
