--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -4,8 +4,22 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
+  
 
 }
+.miBoton {
+    position: relative;
+    width: 7em;
+    height: 3em;
+    border: none;
+    outline: none;
+    padding: 5px;
+    background: linear-gradient(315deg, #e91e63, #5d02ff);
+    color: #fff;
+    font-size: 18px;
+    border-radius: 10px;
+  }
+  
 
 .userInfo {
     display: flex;
