--- a/src/pages/SuperAdAppoint/SuperAdAppoint.css
+++ b/src/pages/SuperAdAppoint/SuperAdAppoint.css
@@ -1,3 +1,40 @@
 .img{
     width: 50px;
 }
+.appointmentsUserContainer{
+    display: felx;
+    justify-content: center;
+}
+.max-width-900 {
+    max-width: 900px;
+  }
+/* .appointmentsGrid {
+    display: grid;
+    grid-template-columns: repeat(3, fr);
+    grid-gap: 10px;
+   
+  } */
+  /* .col md-4 {
+    border-style: solid 1px;
+    border-bottom: white;
+    padding: 10px;
+    
+  } */
+/* .gradient-border {
+    position: relative;
+    padding: 20px; 
+    border: 1px solid transparent; 
+  }
+  
+  .gradient-border:before {
+    content: "";
+    position: absolute;
+    top: -1px; 
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 1px solid;
+    border-image: linear-gradient(315deg, #5d02ff, #e91e63) 1;
+    z-index: -1; /* place the gradient border behind the content 
+  } */
+  
